优化代码包结构